fixed subscriptions view overflow

--- a/styles/_subscriptions.scss
+++ b/styles/_subscriptions.scss
@@ -1,5 +1,9 @@
 @import "../styles//variables";
 
+.subscriptions-view {
+  height: 100%;
+}
+
 .subscriptions-list {
   display: flex;
   justify-content: center;
